<resources>
    <string name="app_name">My Map</string>
    <string name="EditText_Latitud">  Latitud: </string>
    <string name="EditText_Longuitud">  Longuitud: </string>
    <string name="Button_Listar">Listar DB</string>
    <string name="boton_regresar">Regresar </string>
    <string name="boton_Guardar">Guardar Coordenadas</string>
    <string name="boton_Eliminar">Borrar data DB </string>
</resources>